added utils classes, decompositioned program